--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
     
     <groupId>com.mycompany</groupId>
-    <artifactId>TP_MOD_03_1302210009_HeruIkhsanMaulana</artifactId>
+    <artifactId>com.mycompany</artifactId>
     <version>1.0-SNAPSHOT</version>
     
     <dependencies>
